# vt7packer

./: .gitignore  CHANGELOG.md  Cargo.toml  FORMAT_DOCUMENTATION.md  LICENSE  README.md  USAGE.md  cliff.toml  dist-workspace.toml
.github/workflows/: release.yml
src/: commands.rs  compression.rs  error.rs  main.rs  resource.rs
src/codecs/: mod.rs  ogg_codec.rs  old_engine_codec.rs  osa_codec.rs  raw_codec.rs  save_codec.rs  sword_text_codec.rs  ttf_codec.rs  txt_codec.rs  vt7a_codec.rs  webm_codec.rs  webp_codec.rs  xml_codec.rs
