[package]
name = "vt7packer"
authors = ["Jan Niklas Richter"]
description = "Unpack and pack game files from the Virtual Theatre 7 game engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/arcticxwolf/vt7unpacker"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fern = "0.7.0"
log = "0.4.22"
miniz_oxide = { version = "0.8.0", features = ["std"]}
serde =  { version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["base64"] }
xml = "0.8.20"
