[package]
name = "vt7packer"
authors = ["Jan Niklas Richter"]
description = "Unpack and pack game files from the Virtual Theatre 7 game engine"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/arcticxwolf/vt7unpacker"


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
fern = "0.7.1"
flate2 = "1.1.1"
log = "0.4.25"
serde =  { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
serde_with = { version = "3.12.0", features = ["base64"] }
sha2 = "0.10.8"
xml = "0.8.20"
zstd = "0.13.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
